Side jumping Bugfix
Siehe https://css-tricks.com/elegant-fix-jumping-scrollbar-issue/

--- a/blog.css
+++ b/blog.css
@@ -1,5 +1,10 @@
 /* stylelint-disable selector-list-comma-newline-after */
 
+html {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+}
+
 .blog-header {
   line-height: 1;
   border-bottom: 1px solid #e5e5e5;
